--- a/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/catalogoVoluntarios.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/catalogoVoluntarios.zul
@@ -1,3 +1,5 @@
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<window width="80%" sclass="window-dialog"
 		action="show: slideIn;hide: slideOut"
@@ -6,30 +8,60 @@
 		viewModel="@id('vm') @init('ve.smile.gestion.voluntariado.capacitacion.inscripcion.viewmodels.VM_CatalogoVoluntario', dialogData=arg.get('dialogData'))">
 		<caption label="VOLUNTARIOS" style="margin-left: 40%;" />
 		<separator height="20px"></separator>
-		<n:h6 style="margin-left: 5%;"> Por favor seleccione los voluntarios</n:h6>
+		<n:h6 style="margin-left: 5%;">
+			Por favor seleccione los voluntarios
+		</n:h6>
 		<separator height="20px" orient="vertical"></separator>
-		<listbox id="listbox" model="@load(vm.objectList)" selectedItem="@bind(vm.selectedObject)" multiple="true" checkmark="true" style="width: 90%; margin-left: 5%;padding-bottom: 5%;">
+		<listbox id="listbox" model="@load(vm.objectList)"
+			selectedItem="@bind(vm.selectedObject)" multiple="true"
+			checkmark="true"
+			emptyMessage="No hay voluntarios activos registrados"
+			style="width: 90%; margin-left: 5%;padding-bottom: 5%;">
+
 			<listhead>
-				<listheader width="5%"/>
-				<listheader width="20%" label="Cédula" />
-				<listheader width="75%" label="Voluntario" />
+				<listheader width="10%" label="Imagen" />
+				<listheader width="15%" label="Cédula/RIF" />
+				<listheader width="15%" label="Nombre" />
+				<listheader width="20%" label="Apellido" />
+				<listheader width="20%" label="Correo" />
+				<listheader width="20%" label="Teléfono" />
 			</listhead>
 			<template name="model">
 				<listitem>
-					<listcell/>
-					<listcell label="@load(each.fkPersona.identificacion)" />
-					<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
+					<listcell>
+						<div align="center" style=" display: inline-block;"
+							visible="@load(not empty each.fkPersona.fkMultimedia and not empty each.fkPersona.fkMultimedia.url)">
+							<image
+								src="${m:getUrlWeb(each.fkPersona.fkMultimedia.url)}"
+								width="30px" height="30px" sclass="circle">
+							</image>
+						</div>
+					</listcell>
+					<listcell
+						label="@load(each.fkPersona.identificacion)" />
+					<listcell label="@load(each.fkPersona.nombre)" />
+					<listcell label="@load(each.fkPersona.apellido)" />
+					<listcell label="@load(each.fkPersona.correo)" />
+					<listcell label="@load(each.fkPersona.telefono1)" />
 				</listitem>
 			</template>
 			<listfoot>
-				<listfooter id="listFoot" span="2" use="karen.core.listfoot.ListFoot">	</listfooter>
+				<listfooter id="listFoot" span="6"
+					use="karen.core.listfoot.ListFoot">
+				</listfooter>
 			</listfoot>
 		</listbox>
 
 		<div sclass="div-buttons-dialog" style="padding-bottom: 2%;">
 			<div>
-				<button id="btnAccept" label="Seleccionar" sclass="indigo waves-effect waves-light btn" iconSclass="fa fa-check"> </button>
-				<button id="btnCancel" label="Cancelar" sclass="red waves-effect waves-light btn" iconSclass="z-icon-times"> </button>
+				<button id="btnAccept" label="Seleccionar"
+					sclass="indigo waves-effect waves-light btn"
+					iconSclass="fa fa-check">
+				</button>
+				<button id="btnCancel" label="Cancelar"
+					sclass="red waves-effect waves-light btn"
+					iconSclass="z-icon-times">
+				</button>
 			</div>
 		</div>
 	</window>
