--- a/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/registroVoluntarios.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/registroVoluntarios.zul
@@ -1,55 +1,119 @@
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
-			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Seleccione los voluntarios a inscribir en la capacitación" sclass="label-medium-500"></label>
+			<div class="col s12" align="center"
+				style="margin-bottom: 15px;">
+				<label
+					value="Seleccione los voluntarios a inscribir en la capacitación"
+					sclass="label-medium-500">
+				</label>
 			</div>
 		</div>
-		
+
 		<div width="100%">
 			<div class="row">
 				<div class="col s12">
-				
+
 					<div class="input-field col s12">
-						<n:label for="nombre" class="active">Capacitación planificada</n:label>
-						<textbox id="nombre" type="text" disabled="true" value="@bind(vm.selectedObject.fkCapacitacion.nombre)"> </textbox>
+						<n:label for="nombre" class="active">
+							Capacitación planificada
+						</n:label>
+						<textbox id="nombre" type="text" disabled="true"
+							value="@bind(vm.selectedObject.fkCapacitacion.nombre)">
+						</textbox>
 					</div>
-					
+
 					<div class="input-field col s6">
-						<n:label for="lugar" class="active">Lugar</n:label>
-						<textbox id="lugar" type="text" disabled="true" value="@bind(vm.selectedObject.fkDirectorio.nombre)"> </textbox>
+						<n:label for="lugar" class="active">
+							Lugar
+						</n:label>
+						<textbox id="lugar" type="text" disabled="true"
+							value="@bind(vm.selectedObject.fkDirectorio.nombre)">
+						</textbox>
 					</div>
-					
+
 					<div class="input-field col s6">
-						<n:label for="fecha_planificada" class="active">Fecha planificada</n:label>
-						<datebox id="fecha_planificada" readonly="true" disabled="true" cols="20" format="dd/MM/yyyy" value="@bind(vm.selectedObject.fechaPlanificada)" />
+						<n:label for="fecha_planificada"
+							class="active">
+							Fecha planificada
+						</n:label>
+						<datebox id="fecha_planificada" readonly="true"
+							disabled="true" cols="20" format="dd/MM/yyyy"
+							value="@bind(vm.selectedObject.fechaPlanificada)" />
 					</div>
-					
+
 					<div class="input-field col s12">
-						<n:label for="direccion" class="active">Dirección de la capacitación</n:label>
-						<textbox id="direccion" type="text" disabled="true" value="@bind(vm.selectedObject.fkDirectorio.direccion)"> </textbox>
+						<n:label for="direccion" class="active">
+							Dirección de la capacitación
+						</n:label>
+						<textbox id="direccion" type="text"
+							disabled="true"
+							value="@bind(vm.selectedObject.fkDirectorio.direccion)">
+						</textbox>
 					</div>
 
 					<div class="row">
 						<div class="input-field col s11">
-							<listbox id="tabla" height="300px" emptyMessage="No hay voluntarios registrados en la capacitación" model="@bind(vm.voluntariosInscritos)">
-								<listhead sizable="true">
-									<listheader align="center" label="Cédula"  />
-									<listheader align="center" label="Voluntario" />
+							<listbox id="tabla" height="300px"
+								emptyMessage="No hay voluntarios registrados en la capacitación"
+								model="@bind(vm.volCapacitacionPlanificadas)">
+								<listhead>
+									<listheader width="10%"
+										label="Imagen" />
+									<listheader width="15%"
+										label="Cédula" />
+									<listheader width="20%"
+										label="Voluntario" />
+									<listheader width="20%"
+										label="Correo" />
+									<listheader width="15%"
+										label="Teléfono" />
+									<listheader width="10%"
+										label="Eliminar" />
 								</listhead>
-								<template name="model">
+								<template name="model"
+									status="statusVoluntario">
 									<listitem>
-										<listcell label="@load(each.fkPersona.identificacion)"> </listcell>
-										<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
+										<listcell>
+											<div align="center"
+												visible="@load(not empty each.fkVoluntario.fkPersona.fkMultimedia and not empty each.fkVoluntario.fkPersona.fkMultimedia.url)">
+												<image
+													src="${m:getUrlWeb(each.fkVoluntario.fkPersona.fkMultimedia.url)}"
+													width="30px" height="30px" sclass="circle">
+												</image>
+											</div>
+										</listcell>
+										<listcell
+											label="@load(each.fkVoluntario.fkPersona.identificacion)" />
+										<listcell
+											label="@load(each.fkVoluntario.fkPersona.nombre.concat(' ').concat(each.fkVoluntario.fkPersona.apellido))" />
+										<listcell
+											label="@load(each.fkVoluntario.fkPersona.correo)" />
+										<listcell
+											label="@load(each.fkVoluntario.fkPersona.telefono1)" />
+
+										<listcell>
+											<button
+												onClick="@command('eliminarVoluntario',  index=statusVoluntario.index)"
+												sclass="btn-sm-grid btn-pink " style="margin-left: 3px;"
+												tooltiptext="Eliminar" iconSclass="fa fa-trash">
+											</button>
+										</listcell>
 									</listitem>
 								</template>
 							</listbox>
 						</div>
-						
-						<div class="input-field col s1" style="font-size: 2em;">
-							<button sclass="teal lighten-1 waves-effect waves-light" onClick="@command('buscarVoluntarios')" iconSclass="fa fa-search" tooltiptext="Buscar voluntarios" style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center"></button>
+
+						<div class="input-field col s1"
+							style="font-size: 2em;">
+							<button
+								sclass="teal lighten-1 waves-effect waves-light"
+								onClick="@command('buscarVoluntarios')"
+								iconSclass="fa fa-search" tooltiptext="Buscar voluntarios"
+								style="padding: 5px 6px; background-color: #2AA4EF !important; float: center">
+							</button>
 						</div>
-						
+
 					</div>
 				</div>
 			</div>
