--- a/WebContent/views/desktop/gestion/voluntariado/capacitacion/planificacion/registroCapacitacion.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/capacitacion/planificacion/registroCapacitacion.zul
@@ -1,66 +1,101 @@
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
-		
-			<div class="col s12">			
+
+			<div class="col s12">
 				<div class="row">
-					<div class="col s12" align="center" style="margin-bottom: 15px;">
-						<label value="Ingrese los datos de la planificación de la capacitación" sclass="label-medium-500"></label>
+					<div class="col s12" align="center"
+						style="margin-bottom: 15px;">
+						<label
+							value="Ingrese los datos de la planificación de la capacitación"
+							sclass="label-medium-500">
+						</label>
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="input-field col s12">
-				<n:label for="nombre" class="active">Capacitación seleccionada</n:label>
-				<textbox id="nombre" type="text" disabled="true" value="@bind(vm.selectedObject.nombre)"> </textbox>
+				<n:label for="nombre" class="active">
+					Capacitación seleccionada
+				</n:label>
+				<textbox id="nombre" type="text" disabled="true"
+					value="@bind(vm.selectedObject.nombre)">
+				</textbox>
 			</div>
-				
+
 			<div class="input-field col s12">
-				<n:label for="apellido" class="active">Clasificador de la capacitación</n:label>
-				<textbox id="apellido" type="text" disabled="true" value="@bind(vm.selectedObject.fkClasificadorCapacitacion.nombre)"> </textbox>
+				<n:label for="apellido" class="active">
+					Clasificador de la capacitación
+				</n:label>
+				<textbox id="apellido" type="text" disabled="true"
+					value="@bind(vm.selectedObject.fkClasificadorCapacitacion.nombre)">
+				</textbox>
 			</div>
-			
-			<div class="input-field col s6">
-				<n:label for="descripcion" class="active"> Descripción del registro de la capacitacion</n:label>
-				<textbox id="descripcion" type="text" sclass="materialize-textarea" multiline="true" value="@bind(vm.capacitacionPlanificada.descripcion)"> </textbox>
-				<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_descripcion, position=after_end" />
-			</div>
-			
-			<popup id="pop_descripcion" width="200px">
-        		<html>
-        			<![CDATA[Por favor, ingrese la descripción de la capacitación que desea registrar.<br/>]]>
-        		</html>
-    		</popup>
-				
-			<div class="input-field col s6">
-				<n:label for="fecha_planificada" class="active">Fecha planificada</n:label>
-				<datebox id="fecha_planificada" readonly="true" cols="20" format="dd/MM/yyyy" value="@bind(vm.fechaPlanificada)" />
-				<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_fecha, position=after_end" />
-			</div>
-			
-			<popup id="pop_fecha" width="200px">
-        		<html>
-        			<![CDATA[Por favor, seleccione la fecha planificada de la capacitación que desea registrar.<br/>]]>
-        		</html>
-    		</popup>
-			
+
 			<div class="row">
-				<div class="input-field col s11">
+				<div class="input-field col s6">
+					<n:label for="fecha_planificada" class="active">
+						Fecha planificada
+					</n:label>
+					<datebox id="fecha_planificada" readonly="true"
+						cols="20" format="dd/MM/yyyy" value="@bind(vm.fechaPlanificada)" />
+					<span
+						sclass="fa fa-question-circle fa-lg help-icon-special"
+						tooltip="pop_fecha, position=after_end" />
+				</div>
+				<div class="input-field col s5">
 					<n:label for="lugar" class="active">Lugar</n:label>
-						<textbox id="lugar" type="text" disabled="true" value="@bind(vm.directorio.direccion)"></textbox>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_lugar, position=after_end" />
+					<textbox id="lugar" type="text" disabled="true"
+						value="@bind(vm.directorio.direccion)">
+					</textbox>
+					<span
+						sclass="fa fa-question-circle fa-lg help-icon-special"
+						tooltip="pop_lugar, position=after_end" />
 				</div>
-				
-				<div class="input-field col s1" style="font-size: 2em;">
-					<button sclass="teal lighten-1 waves-effect waves-light" onClick="@command('buscarDirectorio')" iconSclass="fa fa-search" style="padding: 5px 15px; background-color: #2AA4EF !important"></button>
+
+				<div class="input-field col s1"
+					style="font-size: 2em;">
+					<button
+						sclass="teal lighten-1 waves-effect waves-light"
+						onClick="@command('buscarDirectorio')" iconSclass="fa fa-search"
+						style="padding: 5px 15px; background-color: #2AA4EF !important">
+					</button>
 				</div>
-				
+
 				<popup id="pop_lugar" width="200px">
-        			<html>
-        				<![CDATA[Por favor, seleccione el lugar de la capacitación que desea registrar.<br/>]]>
+					<html>
+					
+						<![CDATA[Por favor, seleccione el lugar de la
+						capacitación que desea registrar.<br/>]]>
+		
         			</html>
-    			</popup>
+				</popup>
 			</div>
+						<div class="input-field col s6">
+				<n:label for="descripcion" class="active">
+					Descripción del registro de la capacitacion
+				</n:label>
+				<textbox id="descripcion" type="text"
+					sclass="materialize-textarea" multiline="true"
+					value="@bind(vm.capacitacionPlanificada.descripcion)">
+				</textbox>
+				<span
+					sclass="fa fa-question-circle fa-lg help-icon-special"
+					tooltip="pop_descripcion, position=after_end" />
+			</div>
+
+			<popup id="pop_descripcion" width="200px">
+				<html>
+					<![CDATA[Por favor, ingrese la descripción de la
+					capacitación que desea registrar.<br/>]]>
+        		</html>
+			</popup>
+			<popup id="pop_fecha" width="200px">
+				<html>
+					<![CDATA[Por favor, seleccione la fecha planificada
+					de la capacitación que desea registrar.<br/>]]>
+        		</html>
+			</popup>
 		</div>
 	</div>
 </zk>
