--- a/WebContent/views/desktop/gestion/voluntariado/clasificacion/ClasificacionVoluntarioIndex.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/clasificacion/ClasificacionVoluntarioIndex.zul
@@ -1,14 +1,16 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div class="wizard ${arg.animation_} container"
-		 use="karen.core.simple_list.wizard.controllers.C_WindowWizard"
-		 apply="org.zkoss.bind.BindComposer"
-		 viewModel="@id('vm') @init('ve.smile.gestion.voluntariado.clasificacion.viewmodels.VM_ClasificacionVoluntarioIndex')">
-		
+	<div class="wizard ${arg.animation_}"
+		use="karen.core.wizard.controllers.C_WindowWizard"
+		apply="org.zkoss.bind.BindComposer"
+		viewModel="@id('vm') @init('ve.smile.gestion.voluntariado.clasificacion.viewmodels.VM_ClasificacionVoluntarioIndex')">
+
 		<div class="row">
-			<div id="ulHeaderWizard" use="karen.core.simple_list.wizard.buttons.containers.UlHeaderWizard"></div>
+			<div id="ulHeaderWizard"
+				use="karen.core.wizard.buttons.containers.UlHeaderWizard">
+			</div>
 
 			<div sclass="col s12">
-				<include id="include" src="@bind(vm.srcPageContent)"></include>
+				<include id="include"></include>
 			</div>
 
 		</div>
@@ -16,7 +18,7 @@
 		<div class="row">
 			<div class="col s6 offset-s3" align="center">
 				<div id="divButtonsWizard" sclass="row"
-					use="karen.core.simple_list.wizard.buttons.containers.DivButtonsWizard">
+					use="karen.core.wizard.buttons.containers.DivButtonsWizard">
 				</div>
 			</div>
 		</div>
