--- a/WebContent/views/desktop/gestion/voluntariado/registro/datosPersonales.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/registro/datosPersonales.zul
@@ -3,164 +3,271 @@
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
-			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Ingrese los datos personales del voluntario" sclass="label-medium-500"></label>
+			<div class="col s12" align="center"
+				style="margin-bottom: 15px;">
+				<label
+					value="Ingrese los datos personales del voluntario"
+					sclass="label-medium-500">
+				</label>
 			</div>
 		</div>
-		
+
 		<div width="100%">
 			<div class="row">
 				<div class="col s12">
-					
-					<div class="input-field col s6">
-						<n:label for="nombre" class="active">Nombre</n:label>
-						<textbox id="nombre" type="text" value="@bind(vm.selectedObject.fkPersona.nombre)"> </textbox>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_nombre, position=after_end" />
-					</div>
-					
-					<popup id="pop_nombre" width="200px">
-        				<html>
-        					<![CDATA[Por favor, ingrese el nombre del voluntario que desea registrar.<br/>]]>
-        				</html>
-    				</popup>
-				
-					<div class="input-field col s6">
-						<n:label for="apellido" class="active">Apellido</n:label>
-						<textbox id="apellido" type="text" value="@bind(vm.selectedObject.fkPersona.apellido)"> </textbox>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_apellido, position=after_end" />
-					</div>
-					
-					<popup id="pop_apellido" width="200px">
-        				<html>
-        					<![CDATA[Por favor, ingrese el apellido del voluntario que desea registrar.<br/>]]>
-        				</html>
-    				</popup>
-				
-					<div class="input-field col s6">
-						<n:label for="tipo_persona" class="active">Tipo de persona</n:label>
-						<combobox id="tipo_persona" readonly="true" model="@bind(vm.tipoPersonaEnums)" selectedItem="@bind(vm.selectedObject.fkPersona.tipoPersonaEnum)">
-							<template name="model">
-								<comboitem label="@load(each)" />
-							</template>
-						</combobox>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_tipopersona, position=after_end" />
-					</div>
-					
-					<popup id="pop_tipopersona" width="200px">
-        				<html>
-        					<![CDATA[Por favor, seleccione el tipo de persona que desea registrar.<br/>]]>
-        				</html>
-    				</popup>
-					
-					<div class="input-field col s6">
-						<n:label for="identificacion" class="active">Cedula</n:label>
-						<textbox id="identificacion" type="text" value="@bind(vm.selectedObject.fkPersona.identificacion)"> </textbox>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_identificacion, position=after_end" />
-					</div>
-					
-					<popup id="pop_identificacion" width="200px">
-        				<html>
-        					<![CDATA[Por favor, ingrese el número de cédula del voluntario que desea registrar.<br/>]]>
-        				</html>
-    				</popup>
-					
-					<div class="input-field col s6">
-						<n:label for="fecha_nacimiento" class="active">Fecha de nacimiento</n:label>
-						<datebox id="db" cols="20" format="dd/MM/yyyy" value="@bind(vm.fechaNacimiento)"/>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_fechaNacimiento, position=after_end" />
-					</div>
-					
-					<popup id="pop_fechaNacimiento" width="200px">
-        				<html>
-        					<![CDATA[Por favor, seleccione la fecha de nacimiento del voluntario que desea registrar.<br/>]]>
-        				</html>
-    				</popup>
-					
-					<div class="input-field col s6">
-						<n:label for="sexo" class="active">Sexo</n:label>
-						<combobox id="sexo" readonly="true" model="@bind(vm.sexoEnums)" selectedItem="@bind(vm.sexoEnum)">
-							<template name="model">
-								<comboitem label="@load(each)" />
-							</template>
-						</combobox>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_sexo, position=after_end" />
-					</div>
-					
-					<popup id="pop_sexo" width="200px">
-        				<html>
-        					<![CDATA[Por favor, seleccione el sexo del voluntario que desea registrar.<br/>]]>
-        				</html>
-    				</popup>
-							
-					<div class="input-field col s6">
-						<n:label class="active"	for="fk_estado">Estado</n:label>
-						<combobox id="fk_estado" readonly="true" placeholder="Seleccione un estado" instant="true" onSelect="@command('changeEstado')" model="@bind(vm.estados)" selectedItem="@bind(vm.estado)">
-							<template name="model">
-								<comboitem label="@load(each.nombre)" />
-							</template>
-						</combobox>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_estado, position=after_end" />
-					</div>
-					
-					<popup id="pop_estado" width="200px">
-        				<html>
-        					<![CDATA[Por favor, seleccione el estado del país donde reside el voluntario que desea registrar.<br/>]]>
-        				</html>
-    				</popup>
 
 					<div class="input-field col s6">
-						<n:label class="active" for="fk_ciudad">Ciudad</n:label>
-						<combobox id="fk_ciudad" readonly="true" placeholder="Seleccione una ciudad" model="@bind(vm.ciudades)" selectedItem="@bind(vm.selectedObject.fkPersona.fkCiudad)">
+						<n:label for="nombre" class="active">
+							Nombre
+						</n:label>
+						<textbox id="nombre" type="text"
+							value="@bind(vm.selectedObject.fkPersona.nombre)">
+						</textbox>
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_nombre, position=after_end" />
+					</div>
+
+					<popup id="pop_nombre" width="200px">
+						<html>
+							
+							<![CDATA[Por favor, ingrese el nombre del
+							voluntario que desea registrar.<br/>]]>
+							
+        				</html>
+					</popup>
+
+					<div class="input-field col s6">
+						<n:label for="apellido" class="active">
+							Apellido
+						</n:label>
+						<textbox id="apellido" type="text"
+							value="@bind(vm.selectedObject.fkPersona.apellido)">
+						</textbox>
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_apellido, position=after_end" />
+					</div>
+
+					<popup id="pop_apellido" width="200px">
+						<html>
+							
+							<![CDATA[Por favor, ingrese el apellido del
+							voluntario que desea registrar.<br/>]]>
+							
+        				</html>
+					</popup>
+
+					<div class="input-field col s6">
+						<n:label for="tipo_persona" class="active">
+							Tipo de persona
+						</n:label>
+						<combobox id="tipo_persona" readonly="true"
+							model="@bind(vm.tipoPersonaEnums)" disabled="true"
+							selectedItem="@bind(vm.selectedObject.fkPersona.tipoPersonaEnum)">
+							<template name="model">
+								<comboitem label="@load(each)" />
+							</template>
+						</combobox>
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_tipopersona, position=after_end" />
+					</div>
+
+					<popup id="pop_tipopersona" width="200px">
+						<html>
+							
+							<![CDATA[Por favor, seleccione el tipo de
+							persona que desea registrar.<br/>]]>
+							
+        				</html>
+					</popup>
+
+					<div class="input-field col s6">
+						<n:label for="identificacion" class="active">
+							Cedula
+						</n:label>
+						<textbox id="identificacion" type="text"
+							value="@bind(vm.selectedObject.fkPersona.identificacion)">
+						</textbox>
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_identificacion, position=after_end" />
+					</div>
+
+					<popup id="pop_identificacion" width="200px">
+						<html>
+							
+							<![CDATA[Por favor, ingrese el número de
+							cédula del voluntario que desea
+							registrar.<br/>]]>
+							
+        				</html>
+					</popup>
+
+					<div class="input-field col s6">
+						<n:label for="fecha_nacimiento"
+							class="active">
+							Fecha de nacimiento
+						</n:label>
+						<datebox id="db" cols="20" format="dd/MM/yyyy"
+							value="@bind(vm.fechaNacimiento)" />
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_fechaNacimiento, position=after_end" />
+					</div>
+
+					<popup id="pop_fechaNacimiento" width="200px">
+						<html>
+							
+							<![CDATA[Por favor, seleccione la fecha de
+							nacimiento del voluntario que desea
+							registrar.<br/>]]>
+							
+        				</html>
+					</popup>
+
+					<div class="input-field col s6">
+						<n:label for="sexo" class="active">
+							Sexo
+						</n:label>
+						<combobox id="sexo" readonly="true"
+							model="@bind(vm.sexoEnums)" selectedItem="@bind(vm.sexoEnum)">
+							<template name="model">
+								<comboitem label="@load(each)" />
+							</template>
+						</combobox>
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_sexo, position=after_end" />
+					</div>
+
+					<popup id="pop_sexo" width="200px">
+						<html>
+							
+							<![CDATA[Por favor, seleccione el sexo del
+							voluntario que desea registrar.<br/>]]>
+							
+        				</html>
+					</popup>
+
+					<div class="input-field col s6">
+						<n:label class="active" for="fk_estado">
+							Estado
+						</n:label>
+						<combobox id="fk_estado" readonly="true"
+							placeholder="Seleccione un estado" instant="true"
+							onSelect="@command('changeEstado')" model="@bind(vm.estados)"
+							selectedItem="@bind(vm.estado)">
 							<template name="model">
 								<comboitem label="@load(each.nombre)" />
 							</template>
 						</combobox>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_ciudad, position=after_end" />
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_estado, position=after_end" />
 					</div>
-					
-					<popup id="pop_ciudad" width="200px">
-        				<html>
-        					<![CDATA[Por favor, seleccione la ciudad del país donde reside el voluntario que desea registrar.<br/>]]>
-        				</html>
-    				</popup>
-					
-					<div class="input-field col s6">
-						<n:label for="fecha_ingreso" class="active" >Fecha de ingreso</n:label>
-						<datebox id="fecha_ingreso" cols="20" format="dd/MM/yyyy" value="@bind(vm.fechaIngreso)" onCreate="self.value = new Date()"/>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_fechaIngreso, position=after_end" />
-					</div>
-					
-					<popup id="pop_fechaIngreso" width="200px">
-        				<html>
-        					<![CDATA[Por favor, seleccione la fecha de ingreso a la fundación del voluntario que desea registrar.<br/>]]>
-        				</html>
-    				</popup>
+
+					<popup id="pop_estado" width="200px">
+						<html>
 							
-					<div class="input-field col s6">
-						<n:label for="direccion" class="active">Dirección</n:label>
-						<textbox id="direccion" type="text" sclass="materialize-textarea" multiline="true" value="@bind(vm.selectedObject.fkPersona.direccion)">	</textbox>
-						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_direccion, position=after_end" />
-					</div>
-					
-					<popup id="pop_direccion" width="200px">
-        				<html>
-        					<![CDATA[Por favor, ingrese la dirección del voluntario que desea registrar.<br/>]]>
+							<![CDATA[Por favor, seleccione el estado del
+							país donde reside el voluntario que desea
+							registrar.<br/>]]>
+							
         				</html>
-    				</popup>
+					</popup>
+
+					<div class="input-field col s6">
+						<n:label class="active" for="fk_ciudad">
+							Ciudad
+						</n:label>
+						<combobox id="fk_ciudad" readonly="true"
+							placeholder="Seleccione una ciudad" model="@bind(vm.ciudades)"
+							selectedItem="@bind(vm.selectedObject.fkPersona.fkCiudad)">
+							<template name="model">
+								<comboitem label="@load(each.nombre)" />
+							</template>
+						</combobox>
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_ciudad, position=after_end" />
+					</div>
+
+					<popup id="pop_ciudad" width="200px">
+						<html>
+							
+							<![CDATA[Por favor, seleccione la ciudad del
+							país donde reside el voluntario que desea
+							registrar.<br/>]]>
+							
+        				</html>
+					</popup>
+
+					<div class="input-field col s6">
+						<n:label for="fecha_ingreso" class="active">
+							Fecha de ingreso
+						</n:label>
+						<datebox id="fecha_ingreso" cols="20"
+							format="dd/MM/yyyy" value="@bind(vm.fechaIngreso)"
+							onCreate="self.value = new Date()" />
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_fechaIngreso, position=after_end" />
+					</div>
+
+					<popup id="pop_fechaIngreso" width="200px">
+						<html>
+							
+							<![CDATA[Por favor, seleccione la fecha de
+							ingreso a la fundación del voluntario que
+							desea registrar.<br/>]]>
+							
+        				</html>
+					</popup>
+
+					<div class="input-field col s6">
+						<n:label for="direccion" class="active">
+							Dirección
+						</n:label>
+						<textbox id="direccion" type="text"
+							sclass="materialize-textarea" multiline="true"
+							value="@bind(vm.selectedObject.fkPersona.direccion)">
+						</textbox>
+						<span
+							sclass="fa fa-question-circle fa-lg help-icon-special"
+							tooltip="pop_direccion, position=after_end" />
+					</div>
+
+					<popup id="pop_direccion" width="200px">
+						<html>
+							
+							<![CDATA[Por favor, ingrese la dirección del
+							voluntario que desea registrar.<br/>]]>
+							
+        				</html>
+					</popup>
 
 					<div class="col s12" style="padding:0px;">
 						<div class="input-field col s12">
-							<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_multimedia, position=after_end" />
-							<uploadImageSingle maxsize="9000" size="200" idUpload="1" title="Imagen del voluntario" />
+							<span
+								sclass="fa fa-question-circle fa-lg help-icon-special"
+								tooltip="pop_multimedia, position=after_end" />
+							<uploadImageSingle maxsize="9000" size="200"
+								idUpload="1" title="Imagen del voluntario" />
 						</div>
 					</div>
-					
+
 					<popup id="pop_multimedia" width="200px">
-        				<html>
-        					<![CDATA[Por favor, seleccione el archivo de imagen para el voluntario que desea registrar.<br/>]]>
+						<html>
+							
+							<![CDATA[Por favor, seleccione el archivo de
+							imagen para el voluntario que desea
+							registrar.<br/>]]>
+							
         				</html>
-    				</popup>
-					
+					</popup>
+
 				</div>
 			</div>
 		</div>
